# ember

./: MIGRATION_PLAN.md  PUBLISHING.md  README.md
crates/ember-cli/src/: api.rs  config.rs  main.rs
crates/ember-sdk/src/: lib.rs
docs/: api.md  cli.md  integration.md  worker-toml.md
examples/: README.md
examples/pocket-tasks-worker/: Cargo.toml  worker.toml
examples/pocket-tasks-worker/src/: lib.rs
examples/secret-worker/: Cargo.toml  worker.toml
examples/secret-worker/src/: lib.rs
hello-world-test/: worker.toml
skills/ember/: SKILL.md
skills/ember-worker/references/: cli.md
skills/ember/references/: api.md  cli.md  doc_index.md  hello-worker.rs  integration.md  readme.md  sqlite-worker.rs  worker-toml.md
