[package]
name = "pocket-tasks-worker"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
ember-sdk = { path = "../../crates/ember-sdk" }
http = "1.3.1"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wstd = "0.6"
